--- a/style.css
+++ b/style.css
@@ -3,15 +3,34 @@ main {
     justify-content: center;
 }
 
+button {
+    font-size: 20px;
+    border-radius: 5px;
+    box-shadow: none;
+}
+
 .calculator {
     background-color: grey;
-    padding: 10px;
-    width: 30vw;
-    height: 80vh;
+    padding: 12px;
+    border-radius: 9px;
+    width: 400px;
+    height: 550px;
+}
+
+.display {
+    position: relative;
+    background-color: lightblue;
+    border-radius: 5px;
+    height: 22%;
+    margin-bottom: 15px;
+}
+
+.buttons {
+    width: 100%;
+    height: 75%;
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 4px;
     grid-template-areas: 
-    "display display display display"
     "clear clear del del"
     "one two three add"
     "four five six subtract"
@@ -19,17 +38,11 @@ main {
     "decimal zero equals divide";
 }
 
-.display {
-    position: relative;
-    background-color: lightblue;
-    grid-area: display;
-    font-size: 35px;
-}
-
 #display-content {
+    font-size: 50px;
     position: absolute;
-    bottom: 2px;
-    right: 2px;
+    bottom: 6px;
+    right: 10px;
 }
 
 .digit {
